<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="logo_image">logo image</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city, and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="desired_league">Desired league</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">Next</string>
    <string name="i_am_a">I am a:</string>
    <string name="begginer">Begginer</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="search_league">Looking for a co-ed beginner league near you</string>
</resources>
